@@ -1,12 +1,9 @@
 package com.example.momo.global.config;
 
-import com.example.momo.global.filter.JwtAccessDeniedHandler;
-import com.example.momo.global.filter.JwtAuthenticationEntryPoint;
-import com.example.momo.global.filter.JwtFilter;
-import com.example.momo.global.utils.JwtUtil;
-import com.fasterxml.jackson.databind.ObjectMapper;
-import jakarta.servlet.http.HttpServletRequest;
-import lombok.RequiredArgsConstructor;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.List;
+
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
@@ -19,57 +16,72 @@ import org.springframework.security.web.authentication.UsernamePasswordAuthentic
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.List;
+import com.example.momo.global.filter.JwtAccessDeniedHandler;
+import com.example.momo.global.filter.JwtAuthenticationEntryPoint;
+import com.example.momo.global.filter.JwtFilter;
+import com.example.momo.global.utils.JwtUtil;
+import com.fasterxml.jackson.databind.ObjectMapper;
+
+import jakarta.servlet.http.HttpServletRequest;
+import lombok.RequiredArgsConstructor;
 
 @Configuration
 @EnableWebSecurity
 @RequiredArgsConstructor
 public class SecurityConfig {
-    private final JwtUtil jwtUtil;
-    private final JwtAccessDeniedHandler jwtAccessDeniedHandler;
-    private final JwtAuthenticationEntryPoint jwtAuthenticationEntryPoint;
-    private final ObjectMapper objectMapper;
+	private final JwtUtil jwtUtil;
+	private final JwtAccessDeniedHandler jwtAccessDeniedHandler;
+	private final JwtAuthenticationEntryPoint jwtAuthenticationEntryPoint;
+	private final ObjectMapper objectMapper;
 
-    @Bean
-    public CorsConfigurationSource corsConfigurationSource() {
-        return new CorsConfigurationSource(){
-            @Override
-            public CorsConfiguration getCorsConfiguration(HttpServletRequest request) {
-                CorsConfiguration configuration = new CorsConfiguration();
-                configuration.setAllowedOrigins(Collections.singletonList("http://localhost:3000")); //허용할 Origin 등록
-                configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH")); // GET, POST, PUT 등 허용할 요청 메소드 등록
-                configuration.setAllowCredentials(true);
-                configuration.setAllowedHeaders(List.of("Authorization")); //클라이언트가 요청에 어떤 헤더를 실어 보낼 수 있는지 설정
-                configuration.setMaxAge(3600L); //pre-filght 요청의 결과를 얼마동안 캐시해두는 허용할지 시간 지정 (초단위)
-                configuration.setExposedHeaders(Collections.singletonList("Authorization")); // 클라이언트가 응답에서 어떤 헤더를 읽어올 수 있는지 설정
-                return configuration;
-            }
-        };
-    }
+	@Bean
+	public CorsConfigurationSource corsConfigurationSource() {
+		return new CorsConfigurationSource() {
+			@Override
+			public CorsConfiguration getCorsConfiguration(HttpServletRequest request) {
+				CorsConfiguration configuration = new CorsConfiguration();
+				configuration.setAllowedOrigins(Collections.singletonList("http://localhost:3000")); //허용할 Origin 등록
+				configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS",
+					"PATCH")); // GET, POST, PUT 등 허용할 요청 메소드 등록
+				configuration.setAllowCredentials(true);
+				configuration.setAllowedHeaders(List.of("Authorization")); //클라이언트가 요청에 어떤 헤더를 실어 보낼 수 있는지 설정
+				configuration.setMaxAge(3600L); //pre-filght 요청의 결과를 얼마동안 캐시해두는 허용할지 시간 지정 (초단위)
+				configuration.setExposedHeaders(
+					Collections.singletonList("Authorization")); // 클라이언트가 응답에서 어떤 헤더를 읽어올 수 있는지 설정
+				return configuration;
+			}
+		};
+	}
 
-    @Bean
-    public SecurityFilterChain securityFilterChain(HttpSecurity httpSecurity) throws Exception{
-        return httpSecurity
-                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-                .csrf(AbstractHttpConfigurer::disable)
-                .formLogin(AbstractHttpConfigurer::disable)
-                .httpBasic(AbstractHttpConfigurer::disable)
-                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-                .addFilterAt(new JwtFilter(jwtUtil,objectMapper), UsernamePasswordAuthenticationFilter.class)
-                .authorizeHttpRequests(auth -> auth
-                        .anyRequest().permitAll()
-                )
-                .exceptionHandling(configure -> configure
-                        .authenticationEntryPoint(jwtAuthenticationEntryPoint)
-                        .accessDeniedHandler(jwtAccessDeniedHandler)
-                )
-                .build();
-    }
+	@Bean
+	public SecurityFilterChain securityFilterChain(HttpSecurity httpSecurity) throws Exception {
+		return httpSecurity
+			.cors(cors -> cors.configurationSource(corsConfigurationSource()))
+			.csrf(AbstractHttpConfigurer::disable)
+			.formLogin(AbstractHttpConfigurer::disable)
+			.httpBasic(AbstractHttpConfigurer::disable)
+			.sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+			.addFilterAt(new JwtFilter(jwtUtil, objectMapper), UsernamePasswordAuthenticationFilter.class)
+			.authorizeHttpRequests(auth -> auth
+				// 인증이 필요없는 공개 엔드포인트
+				.requestMatchers(
+					"/api/v1/auth/register",
+					"/api/v1/auth/login",
+					"/api/v1/auth/reissue",
+					"/api/v1/categories",
+					"/api/v1/categories/**"
+				).permitAll()
+				.anyRequest().authenticated()
+			)
+			.exceptionHandling(configure -> configure
+				.authenticationEntryPoint(jwtAuthenticationEntryPoint)
+				.accessDeniedHandler(jwtAccessDeniedHandler)
+			)
+			.build();
+	}
 
-    @Bean
-    public BCryptPasswordEncoder passwordEncoder() {
-        return new BCryptPasswordEncoder();
-    }
+	@Bean
+	public BCryptPasswordEncoder passwordEncoder() {
+		return new BCryptPasswordEncoder();
+	}
 }
